# python-pkg-template

./: LICENSE  README.md  cookiecutter.json
hooks/: pre_gen_project.py
scratch/: hooks.ipynb
{{ cookiecutter.__project_slug }}/: .gitignore  LICENSE  README.md  pyproject.toml
{{ cookiecutter.__project_slug }}/docs/: example.ipynb
