[project]
name = "{{ cookiecutter.__project_slug }}"
version = "{{ cookiecutter.version }}"
description = "{{ cookiecutter.description }}"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "{{ cookiecutter.author_name }}", email = "{{ cookiecutter.email }}" },
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
# All the following settings are optional:
where = ["src"]                                        # ["."] by default
include = ["{{ cookiecutter.__project_slug }}"]        # ["*"] by default
exclude = ["{{ cookiecutter.__project_slug/tests* }}"] # empty by default
namespaces = false                                     # true by default
